# minimal-mnist

./: .gitignore  JOURNAL.md  debug.html  debug.py  debug_kernel.py  generate_svg.py  mnist.html  pyproject.toml
src/: trainer.py
src/model/: model.py  numpy_model.py
